Split known ability data from MKAbilityInfo